Add countdown and adaptive

--- a/app/shop-col.html
+++ b/app/shop-col.html
@@ -282,14 +282,36 @@
 									<div class="perfect-product__column">
 										<div class="perfect-product__item">
 											<div class="perfect-product__item-img">
-												<img src="img/cart/06.jpg" alt="">
+												<a href="#">
+													<img src="img/cart/06.jpg" alt="">
+												</a>
 											</div>
 											<div class="perfect-product__item-body">
-												<div class="perfect-product__item-title">Keurig® Commercial Brewing System</div>
+												<a class="perfect-product__item-title" href="#">Keurig® Commercial Brewing System</a>
 												<div class="perfect-product__item-descr">
 													<span>Brews 12, 14, 16. or 18* oz.</span>
 													Need a Keurig for the workplace? We have you covered. Our commercial brewers can easily handle the variety and demands of businesses of any size.
 												</div>
+
+												<div id="countdown" class="perfect-product__countdown countdown">
+													<div class="countdown__number">
+														<span class="days countdown__time"></span>
+														<span class="countdown__text">D</span>
+													</div>
+													<div class="countdown__number">
+														<span class="hours countdown__time"></span>
+														<span class="countdown__text">H</span>
+													</div>
+													<div class="countdown__number">
+														<span class="minutes countdown__time"></span>
+														<span class="countdown__text">M</span>
+													</div>
+													<div class="countdown__number">
+														<span class="seconds countdown__time"></span>
+														<span class="countdown__text">S</span>
+													</div>
+												</div>
+
 												<a class="perfect-product__item-btn btn" href="#">View detail</a>
 											</div>
 										</div>
@@ -297,14 +319,36 @@
 									<div class="perfect-product__column">
 										<div class="perfect-product__item">
 											<div class="perfect-product__item-img">
-												<img src="img/cart/08.jpg" alt="">
+												<a href="#">
+													<img src="img/cart/08.jpg" alt="">
+												</a>
 											</div>
 											<div class="perfect-product__item-body">
-												<div class="perfect-product__item-title">Keurig® Commercial Brewing System</div>
+												<a class="perfect-product__item-title" href="#">Keurig® Commercial Brewing System</a>
 												<div class="perfect-product__item-descr">
 													<span>Brews 12, 14, 16. or 18* oz.</span>
 													Need a Keurig for the workplace? We have you covered. Our commercial brewers can easily handle the variety and demands of businesses of any size.
 												</div>
+
+												<div id="countdown_1" class="perfect-product__countdown countdown">
+													<div class="countdown__number">
+														<span class="days countdown__time"></span>
+														<span class="countdown__text">D</span>
+													</div>
+													<div class="countdown__number">
+														<span class="hours countdown__time"></span>
+														<span class="countdown__text">H</span>
+													</div>
+													<div class="countdown__number">
+														<span class="minutes countdown__time"></span>
+														<span class="countdown__text">M</span>
+													</div>
+													<div class="countdown__number">
+														<span class="seconds countdown__time"></span>
+														<span class="countdown__text">S</span>
+													</div>
+												</div>
+
 												<a class="perfect-product__item-btn btn" href="#">View detail</a>
 											</div>
 										</div>
@@ -769,6 +813,201 @@
 										</div>
 									</div>
 								</div>
+
+								<div class="popular-product__row">
+									<div class="popular-product__column">
+										<div class="popular-product__cart cart">
+											<div class="cart__overlay">
+												new
+											</div>
+											<div class="cart__img">
+												<a href="#">
+													<img src="img/cart/01.jpg" alt="">
+												</a>
+											</div>
+											<div class="cart__body">
+												<div class="cart__body-header">
+													<ul class="cart__body-star">
+														<li><i class="icon-star"></i></li>
+														<li><i class="icon-star"></i></li>
+														<li><i class="icon-star"></i></li>
+														<li><i class="icon-star"></i></li>
+														<li><i class="icon-star"></i></li>
+													</ul>
+													<ul class="cart__body-color">
+														<li></li>
+														<li></li>
+													</ul>
+												</div>
+												<a class="cart__body-title" href="#">
+													BLACK+DECKER 12-Cup Thermal Coffeemaker, Black/Silver, CM2035B | 
+													<span class="cart__body-price">$49.87</span>
+												</a>
+												<div class="cart__body-footer">
+													<a class="cart__body-btn btn" href="#">Add to cart</a>
+													<div class="cart__body-actions">
+														<div class="cart__body-shuffle"><i class="icon-shuffle"></i></div>
+														<div class="cart__body-like active"><i class="icon-heart"></i></div>
+													</div>
+												</div>
+											</div>
+										</div>
+									</div>
+									<div class="popular-product__column">
+										<div class="popular-product__cart cart">
+											<div class="cart__overlay">
+												new
+											</div>
+											<div class="cart__img">
+												<a href="#">
+													<img src="img/cart/01.jpg" alt="">
+												</a>
+											</div>
+											<div class="cart__body">
+												<div class="cart__body-header">
+													<ul class="cart__body-star">
+														<li><i class="icon-star"></i></li>
+														<li><i class="icon-star"></i></li>
+														<li><i class="icon-star"></i></li>
+														<li><i class="icon-star"></i></li>
+														<li><i class="icon-star"></i></li>
+													</ul>
+													<ul class="cart__body-color">
+														<li></li>
+														<li></li>
+													</ul>
+												</div>
+												<a class="cart__body-title" href="#">
+													BLACK+DECKER 12-Cup Thermal Coffeemaker, Black/Silver, CM2035B | 
+													<span class="cart__body-price">$49.87</span>
+												</a>
+												<div class="cart__body-footer">
+													<a class="cart__body-btn btn" href="#">Add to cart</a>
+													<div class="cart__body-actions">
+														<div class="cart__body-shuffle"><i class="icon-shuffle"></i></div>
+														<div class="cart__body-like active"><i class="icon-heart"></i></div>
+													</div>
+												</div>
+											</div>
+										</div>
+									</div>
+									<div class="popular-product__column">
+										<div class="popular-product__cart cart">
+											<div class="cart__overlay">
+												new
+											</div>
+											<div class="cart__img">
+												<a href="#">
+													<img src="img/cart/01.jpg" alt="">
+												</a>
+											</div>
+											<div class="cart__body">
+												<div class="cart__body-header">
+													<ul class="cart__body-star">
+														<li><i class="icon-star"></i></li>
+														<li><i class="icon-star"></i></li>
+														<li><i class="icon-star"></i></li>
+														<li><i class="icon-star"></i></li>
+														<li><i class="icon-star"></i></li>
+													</ul>
+													<ul class="cart__body-color">
+														<li></li>
+														<li></li>
+													</ul>
+												</div>
+												<a class="cart__body-title" href="#">
+													BLACK+DECKER 12-Cup Thermal Coffeemaker, Black/Silver, CM2035B | 
+													<span class="cart__body-price">$49.87</span>
+												</a>
+												<div class="cart__body-footer">
+													<a class="cart__body-btn btn" href="#">Add to cart</a>
+													<div class="cart__body-actions">
+														<div class="cart__body-shuffle"><i class="icon-shuffle"></i></div>
+														<div class="cart__body-like active"><i class="icon-heart"></i></div>
+													</div>
+												</div>
+											</div>
+										</div>
+									</div>
+									<div class="popular-product__column">
+										<div class="popular-product__cart cart">
+											<div class="cart__overlay">
+												new
+											</div>
+											<div class="cart__img">
+												<a href="#">
+													<img src="img/cart/01.jpg" alt="">
+												</a>
+											</div>
+											<div class="cart__body">
+												<div class="cart__body-header">
+													<ul class="cart__body-star">
+														<li><i class="icon-star"></i></li>
+														<li><i class="icon-star"></i></li>
+														<li><i class="icon-star"></i></li>
+														<li><i class="icon-star"></i></li>
+														<li><i class="icon-star"></i></li>
+													</ul>
+													<ul class="cart__body-color">
+														<li></li>
+														<li></li>
+													</ul>
+												</div>
+												<a class="cart__body-title" href="#">
+													BLACK+DECKER 12-Cup Thermal Coffeemaker, Black/Silver, CM2035B | 
+													<span class="cart__body-price">$49.87</span>
+												</a>
+												<div class="cart__body-footer">
+													<a class="cart__body-btn btn" href="#">Add to cart</a>
+													<div class="cart__body-actions">
+														<div class="cart__body-shuffle"><i class="icon-shuffle"></i></div>
+														<div class="cart__body-like active"><i class="icon-heart"></i></div>
+													</div>
+												</div>
+											</div>
+										</div>
+									</div>
+									<div class="popular-product__column">
+										<div class="popular-product__cart cart">
+											<div class="cart__overlay">
+												new
+											</div>
+											<div class="cart__img">
+												<a href="#">
+													<img src="img/cart/01.jpg" alt="">
+												</a>
+											</div>
+											<div class="cart__body">
+												<div class="cart__body-header">
+													<ul class="cart__body-star">
+														<li><i class="icon-star"></i></li>
+														<li><i class="icon-star"></i></li>
+														<li><i class="icon-star"></i></li>
+														<li><i class="icon-star"></i></li>
+														<li><i class="icon-star"></i></li>
+													</ul>
+													<ul class="cart__body-color">
+														<li></li>
+														<li></li>
+													</ul>
+												</div>
+												<a class="cart__body-title" href="#">
+													BLACK+DECKER 12-Cup Thermal Coffeemaker, Black/Silver, CM2035B | 
+													<span class="cart__body-price">$49.87</span>
+												</a>
+												<div class="cart__body-footer">
+													<a class="cart__body-btn btn" href="#">Add to cart</a>
+													<div class="cart__body-actions">
+														<div class="cart__body-shuffle"><i class="icon-shuffle"></i></div>
+														<div class="cart__body-like active"><i class="icon-heart"></i></div>
+													</div>
+												</div>
+											</div>
+										</div>
+									</div>
+
+								</div>
+
 							</div>
 							<!-- popular-product end -->
 
