Add page all-categories-grid with sidebar and content

--- a/app/_header.html
+++ b/app/_header.html
@@ -64,7 +64,7 @@
 								<li class="menu__item menu__dropdown-item"><a href="shop-col.html" class="menu__link menu__dropdown-link">shop col</a></li>
 							</ul>
 						</li>
-						<li class="menu__item"><a class="menu__link" href="#">Featured</a></li>
+						<li class="menu__item"><a class="menu__link" href="all-categories-grid.html">Featured</a></li>
 						<li class="menu__item"><a class="menu__link" href="#">Shortcode</a></li>
 						<li class="menu__item"><a class="menu__link" href="#">Blog</a>
 							<ul class="menu__dropdown">
