Change fonts-icon, add toolbar

--- a/app/all-categories-grid.html
+++ b/app/all-categories-grid.html
@@ -34,9 +34,9 @@
 							<div class="all-categories-grid__sidebar-nav sidebar-nav">
 								<div class="sidebar-nav__title sidebar-nav__title--dark">All Categories</div>
 								<ul class="sidebar-nav__list">
-									<li class="sidebar-nav__item"><a href="#" class="sidebar-nav__link sidebar-nav__link--dark">Coffee Machines</a></li>
-									<li class="sidebar-nav__item"><a href="#" class="sidebar-nav__link">Single-Serve Brewers</a></li>
-									<li class="sidebar-nav__item"><a class="sidebar-nav__link" href="#">Shop<i class="icon-angle-right sidebar-nav__icon"></i></a>
+									<li class="sidebar-nav__item sidebar-nav__item--dark"><a href="#" class="sidebar-nav__link sidebar-nav__link--dark">Coffee Machines</a></li>
+									<li class="sidebar-nav__item sidebar-nav__item--dark"><a href="#" class="sidebar-nav__link sidebar-nav__link--dark">Single-Serve Brewers</a></li>
+									<li class="sidebar-nav__item sidebar-nav__item--dark"><a class="sidebar-nav__link sidebar-nav__link--dark" href="#">Shop<i class="icon-angle-right sidebar-nav__icon"></i></a>
 										<ul class="sidebar-nav__dropdown">
 											<div class="sidebar-nav__dropdown-row">
 												<div class="sidebar-nav__dropdown-column">
@@ -62,10 +62,10 @@
 											</div>
 										</ul>
 									</li>
-									<li class="sidebar-nav__item"><a href="#" class="sidebar-nav__link">Espresso Machine</a></li>
-									<li class="sidebar-nav__item"><a href="#" class="sidebar-nav__link">Coffeemaker Combos</a></li>
-									<li class="sidebar-nav__item"><a href="#" class="sidebar-nav__link">Coffee Makers</a></li>
-									<li class="sidebar-nav__item"><a class="sidebar-nav__link" href="#">French Presses<i class="icon-angle-right sidebar-nav__icon"></i></a>
+									<li class="sidebar-nav__item sidebar-nav__item--dark"><a href="#" class="sidebar-nav__link sidebar-nav__link--dark">Espresso Machine</a></li>
+									<li class="sidebar-nav__item sidebar-nav__item--dark"><a href="#" class="sidebar-nav__link sidebar-nav__link--dark">Coffeemaker Combos</a></li>
+									<li class="sidebar-nav__item sidebar-nav__item--dark"><a href="#" class="sidebar-nav__link sidebar-nav__link--dark">Coffee Makers</a></li>
+									<li class="sidebar-nav__item sidebar-nav__item--dark"><a class="sidebar-nav__link sidebar-nav__link--dark" href="#">French Presses<i class="icon-angle-right sidebar-nav__icon"></i></a>
 										<ul class="sidebar-nav__dropdown">
 											<div class="sidebar-nav__dropdown-row">
 												<div class="sidebar-nav__dropdown-column">
@@ -91,10 +91,10 @@
 											</div>
 										</ul>
 									</li>
-									<li class="sidebar-nav__item"><a href="#" class="sidebar-nav__link">Disposable Coffee Filters</a></li>
-									<li class="sidebar-nav__item"><a href="#" class="sidebar-nav__link">Thermal Carafes</a></li>
-									<li class="sidebar-nav__item"><a href="#" class="sidebar-nav__link">Coffee & Tea</a></li>
-									<li class="sidebar-nav__item"><a class="sidebar-nav__link" href="#">Coffee & Espresso Machine<i class="icon-angle-right sidebar-nav__icon"></i></a>
+									<li class="sidebar-nav__item sidebar-nav__item--dark"><a href="#" class="sidebar-nav__link sidebar-nav__link--dark">Disposable Coffee Filters</a></li>
+									<li class="sidebar-nav__item sidebar-nav__item--dark"><a href="#" class="sidebar-nav__link sidebar-nav__link--dark">Thermal Carafes</a></li>
+									<li class="sidebar-nav__item sidebar-nav__item--dark"><a href="#" class="sidebar-nav__link sidebar-nav__link--dark">Coffee & Tea</a></li>
+									<li class="sidebar-nav__item sidebar-nav__item--dark"><a class="sidebar-nav__link sidebar-nav__link--dark" href="#">Coffee & Espresso Machine<i class="icon-angle-right sidebar-nav__icon"></i></a>
 										<ul class="sidebar-nav__dropdown">
 											<div class="sidebar-nav__dropdown-row">
 												<div class="sidebar-nav__dropdown-column">
@@ -120,8 +120,8 @@
 											</div>
 										</ul>
 									</li>
-									<li class="sidebar-nav__item"><a href="#" class="sidebar-nav__link">Accessories</a></li>
-									<li class="sidebar-nav__item"><a href="#" class="sidebar-nav__link">Percolators</a></li>
+									<li class="sidebar-nav__item sidebar-nav__item--dark"><a href="#" class="sidebar-nav__link sidebar-nav__link--dark">Accessories</a></li>
+									<li class="sidebar-nav__item sidebar-nav__item--dark"><a href="#" class="sidebar-nav__link sidebar-nav__link--dark">Percolators</a></li>
 								</ul>
 							</div>
 							<!-- sidebar-nav end -->
@@ -193,12 +193,12 @@
 							<div class="all-categories-grid__content-slider slider-grid">
 								<div class="slider-grid__item">
 									<div class="slider-grid__item-img">
-										<img src="img/newsletter/bg.jpg" alt="">
+										<img src="img/slider-grid/01.jpg" alt="">
 									</div>
 								</div>
 								<div class="slider-grid__item">
 									<div class="slider-grid__item-img">
-										<img src="img/newsletter/bg.jpg" alt="">
+										<img src="img/slider-grid/03.jpg" alt="">
 									</div>
 								</div>
 								<div class="slider-grid__item">
@@ -208,6 +208,33 @@
 								</div>
 							</div>
 							<!-- slider-grid end -->
+
+							<!-- toolbar -->
+							<div class="all-categories-grid__content-toolbar toolbar">
+								<div class="toolbar__row">
+									<div class="toolbar__column">
+										<div class="toolbar__sort">
+											<a class="toolbar__sort-link" href="#"><i class="icon-th toolbar__sort-icon"></i></a>
+											<a class="toolbar__sort-link" href="#"><i class="icon-th-large toolbar__sort-icon"></i></a>
+											<a class="toolbar__sort-link" href="#"><i class="icon-th-list toolbar__sort-icon"></i></a>
+											<span class="toolbar__sort-result">Showing 1–15 of 20 results</span>
+										</div>
+									</div>
+									<div class="toolbar__column">
+										<div class="toolbar__select-sort">
+											<select name="sort" id="sort">
+												<option value="default">Default sorting</option>
+												<option value="popularity">Popularity</option>
+												<option value="rating">Average rating</option>
+												<option value="recent">Sort by most recent</option>
+												<option value="cheapest">Price: from the cheapest</option>
+												<option value="expensive">Price: from the most expensive</option>
+											</select>
+										</div>
+									</div>
+								</div>
+							</div>
+							<!-- toolbar end -->
 							
 							<!-- carts-grid -->
 							<div class="all-categories-grid__content-carts carts-grid">
