--- a/app/shop-col.html
+++ b/app/shop-col.html
@@ -78,11 +78,11 @@
 
 							<!-- sidebar-nav -->
 							<div class="shop-col__sidebar-nav sidebar-nav">
-								<div class="sidebar-nav__title">All Categories</div>
+								<div class="sidebar-nav__title sidebar-nav__title--light">All Categories</div>
 								<ul class="sidebar-nav__list">
-									<li class="sidebar-nav__item"><a href="#" class="sidebar-nav__link">Coffee Machines</a></li>
-									<li class="sidebar-nav__item"><a href="#" class="sidebar-nav__link">Single-Serve Brewers</a></li>
-									<li class="sidebar-nav__item"><a class="sidebar-nav__link" href="#">Shop<i class="icon-angle-right sidebar-nav__icon"></i></a>
+									<li class="sidebar-nav__item sidebar-nav__item--light"><a href="#" class="sidebar-nav__link sidebar-nav__link--light">Coffee Machines</a></li>
+									<li class="sidebar-nav__item sidebar-nav__item--light"><a href="#" class="sidebar-nav__link sidebar-nav__link--light">Single-Serve Brewers</a></li>
+									<li class="sidebar-nav__item sidebar-nav__item--light"><a class="sidebar-nav__link sidebar-nav__link--light" href="#">Shop<i class="icon-angle-right sidebar-nav__icon"></i></a>
 										<ul class="sidebar-nav__dropdown">
 											<div class="sidebar-nav__dropdown-row">
 												<div class="sidebar-nav__dropdown-column">
@@ -108,10 +108,10 @@
 											</div>
 										</ul>
 									</li>
-									<li class="sidebar-nav__item"><a href="#" class="sidebar-nav__link">Espresso Machine</a></li>
-									<li class="sidebar-nav__item"><a href="#" class="sidebar-nav__link">Coffeemaker Combos</a></li>
-									<li class="sidebar-nav__item"><a href="#" class="sidebar-nav__link">Coffee Makers</a></li>
-									<li class="sidebar-nav__item"><a class="sidebar-nav__link" href="#">French Presses<i class="icon-angle-right sidebar-nav__icon"></i></a>
+									<li class="sidebar-nav__item sidebar-nav__item--light"><a href="#" class="sidebar-nav__link sidebar-nav__link--light">Espresso Machine</a></li>
+									<li class="sidebar-nav__item sidebar-nav__item--light"><a href="#" class="sidebar-nav__link sidebar-nav__link--light">Coffeemaker Combos</a></li>
+									<li class="sidebar-nav__item sidebar-nav__item--light"><a href="#" class="sidebar-nav__link sidebar-nav__link--light">Coffee Makers</a></li>
+									<li class="sidebar-nav__item sidebar-nav__item--light"><a class="sidebar-nav__link sidebar-nav__link--light" href="#">French Presses<i class="icon-angle-right sidebar-nav__icon"></i></a>
 										<ul class="sidebar-nav__dropdown">
 											<div class="sidebar-nav__dropdown-row">
 												<div class="sidebar-nav__dropdown-column">
@@ -137,10 +137,10 @@
 											</div>
 										</ul>
 									</li>
-									<li class="sidebar-nav__item"><a href="#" class="sidebar-nav__link">Disposable Coffee Filters</a></li>
-									<li class="sidebar-nav__item"><a href="#" class="sidebar-nav__link">Thermal Carafes</a></li>
-									<li class="sidebar-nav__item"><a href="#" class="sidebar-nav__link">Coffee & Tea</a></li>
-									<li class="sidebar-nav__item"><a class="sidebar-nav__link" href="#">Coffee & Espresso Machine<i class="icon-angle-right sidebar-nav__icon"></i></a>
+									<li class="sidebar-nav__item sidebar-nav__item--light"><a href="#" class="sidebar-nav__link sidebar-nav__link--light">Disposable Coffee Filters</a></li>
+									<li class="sidebar-nav__item sidebar-nav__item--light"><a href="#" class="sidebar-nav__link sidebar-nav__link--light">Thermal Carafes</a></li>
+									<li class="sidebar-nav__item sidebar-nav__item--light"><a href="#" class="sidebar-nav__link sidebar-nav__link--light">Coffee & Tea</a></li>
+									<li class="sidebar-nav__item sidebar-nav__item--light"><a class="sidebar-nav__link sidebar-nav__link--light" href="#">Coffee & Espresso Machine<i class="icon-angle-right sidebar-nav__icon"></i></a>
 										<ul class="sidebar-nav__dropdown">
 											<div class="sidebar-nav__dropdown-row">
 												<div class="sidebar-nav__dropdown-column">
@@ -166,8 +166,8 @@
 											</div>
 										</ul>
 									</li>
-									<li class="sidebar-nav__item"><a href="#" class="sidebar-nav__link">Accessories</a></li>
-									<li class="sidebar-nav__item"><a href="#" class="sidebar-nav__link">Percolators</a></li>
+									<li class="sidebar-nav__item sidebar-nav__item--light"><a href="#" class="sidebar-nav__link sidebar-nav__link--light">Accessories</a></li>
+									<li class="sidebar-nav__item sidebar-nav__item--light"><a href="#" class="sidebar-nav__link sidebar-nav__link--light">Percolators</a></li>
 								</ul>
 							</div>
 							<!-- sidebar-nav end -->
