--- a/app/_header.html
+++ b/app/_header.html
@@ -53,7 +53,7 @@
 										</ul>
 									</div> -->
 									<div class="menu__submenu-column">
-										<img class="menu__submenu-img" src="img/01.jpg" alt="">
+										<img class="menu__submenu-img" src="img/information_01/01.jpg" alt="">
 									</div>
 								</div>
 							</ul>
