Add blokc sponsor, sidebar-brand

--- a/app/all-categories-grid.html
+++ b/app/all-categories-grid.html
@@ -128,7 +128,12 @@
 
 							<!-- sidebar-price -->
 							<div class="all-categories-grid__sidebar-price sidebar-price">
-
+								<div class="sidebar-price__title">By price</div>
+								<div class="sidebar-price__polzunok">
+									<input type="text" class="sidebar-price__polzunok-input-l"/>
+									<input type="text" class="sidebar-price__polzunok-input-r"/>
+									<div class="sidebar-price__polzunok-line"></div>
+							  </div>
 							</div>
 							<!-- sidebar-price end -->
 
@@ -156,6 +161,36 @@
 									<span class="checkmark"></span>
 								</label>
 								<label class="label">L.F.I CAMERA! <span>(25)</span>
+									<input type="checkbox">
+									<span class="checkmark"></span>
+								</label>
+							</div>
+							<!-- sidebar-brands end -->
+							
+							<!-- sidebar-brands -->
+							<div class="all-categories-grid__sidebar-brands sidebar-brands">
+								<div class="sidebar-brands__title">By color</div>
+								<label class="label">Green <span>(90)</span>
+									<input type="checkbox">
+									<span class="checkmark"></span>
+								</label>
+								<label class="label">Red <span>(80)</span>
+									<input type="checkbox">
+									<span class="checkmark"></span>
+								</label>
+								<label class="label">Yellow <span>(43)</span>
+									<input type="checkbox">
+									<span class="checkmark"></span>
+								</label>
+								<label class="label">Brown <span>(97)</span>
+									<input type="checkbox">
+									<span class="checkmark"></span>
+								</label>
+								<label class="label">Black <span>(18)</span>
+									<input type="checkbox">
+									<span class="checkmark"></span>
+								</label>
+								<label class="label">White <span>(25)</span>
 									<input type="checkbox">
 									<span class="checkmark"></span>
 								</label>
