--- a/app/shop-col.html
+++ b/app/shop-col.html
@@ -272,7 +272,64 @@
 						<div class="shop-col__content">
 
 							<div class="shop-col__content-sponsor sponsor">
-
+								<div class="sponsor__row">
+									<div class="sponsor__column">
+										<div class="sponsor__item">
+											<a href="#">
+												<img src="img/sponsor/partner_10.png" alt="">
+											</a>
+										</div>
+									</div>
+									<div class="sponsor__column">
+										<div class="sponsor__item">
+											<a href="#">
+												<img src="img/sponsor/partner_12.png" alt="">
+											</a>
+										</div>
+									</div>
+									<div class="sponsor__column">
+										<div class="sponsor__item">
+											<a href="#">
+												<img src="img/sponsor/partner_11.png" alt="">
+											</a>
+										</div>
+									</div>
+									<div class="sponsor__column">
+										<div class="sponsor__item">
+											<a href="#">
+												<img src="img/sponsor/partner_10.png" alt="">
+											</a>
+										</div>
+									</div>
+									<div class="sponsor__column">
+										<div class="sponsor__item">
+											<a href="#">
+												<img src="img/sponsor/partner_14.png" alt="">
+											</a>
+										</div>
+									</div>
+									<div class="sponsor__column">
+										<div class="sponsor__item">
+											<a href="#">
+												<img src="img/sponsor/partner_11.png" alt="">
+											</a>
+										</div>
+									</div>
+									<div class="sponsor__column">
+										<div class="sponsor__item">
+											<a href="#">
+												<img src="img/sponsor/partner_16.png" alt="">
+											</a>
+										</div>
+									</div>
+									<div class="sponsor__column">
+										<div class="sponsor__item">
+											<a href="#">
+												<img src="img/sponsor/partner_10.png" alt="">
+											</a>
+										</div>
+									</div>
+								</div>
 							</div>
 
 							<!-- perfect-product -->
