--- a/app/_header.html
+++ b/app/_header.html
@@ -71,6 +71,7 @@
 								<li class="menu__item menu__dropdown-item"><a href="blog-col.html" class="menu__link menu__dropdown-link">blog col</a></li>
 								<li class="menu__item menu__dropdown-item"><a href="blog-default.html" class="menu__link menu__dropdown-link">blog default</a></li>
 								<li class="menu__item menu__dropdown-item"><a href="blog-list.html" class="menu__link menu__dropdown-link">blog list</a></li>
+								<li class="menu__item menu__dropdown-item"><a href="blog-single.html" class="menu__link menu__dropdown-link">blog single</a></li>
 							</ul>
 						</li>
 						<li class="menu__item"><a class="menu__link" href="contact-us.html">Contact us</a></li>
