Add block comments and leave-comment for page all-categories-gid

--- a/app/all-categories-grid.html
+++ b/app/all-categories-grid.html
@@ -132,8 +132,8 @@
 								<div class="sidebar-price__polzunok">
 									<input type="text" class="sidebar-price__polzunok-input-l"/>
 									<input type="text" class="sidebar-price__polzunok-input-r"/>
-									<div class="sidebar-price__polzunok-line"></div>
 							  </div>
+							  <button class="sidebar-price__polzunok-btn btn">Filter now</button>
 							</div>
 							<!-- sidebar-price end -->
 
