--- a/app/blog-single.html
+++ b/app/blog-single.html
@@ -124,6 +124,120 @@
 							</div>
 							<!-- news end -->
 
+							<!-- comments -->
+							<div class="comments">
+								<div class="comments__title sidebar__title">4 comment</div>
+								<div class="comments__comment">
+									<div class="comments__comment-img">
+										<img src="img/testimonial/07.jpg" alt="">
+									</div>
+									<div class="comments__comment-content">
+										<div class="comments__comment-header">
+											<div class="comments__comment-name">KomodoArt</div>
+											<div class="comments__comment-date">March 29, 2016</div>
+											<a class="comments__comment-btn btn" href="#">Reply</a>
+										</div>
+										<div class="comments__comment-text">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</div>
+									</div>
+								</div>
+								<div class="comments__comment">
+									<div class="comments__comment-img">
+										<img src="img/testimonial/06.jpg" alt="">
+									</div>
+									<div class="comments__comment-content">
+										<div class="comments__comment-header">
+											<div class="comments__comment-name">KomodoArt</div>
+											<div class="comments__comment-date">March 29, 2016</div>
+											<a class="comments__comment-btn btn" href="#">Reply</a>
+										</div>
+										<div class="comments__comment-text">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</div>
+									</div>
+								</div>
+								<div class="comments__comment">
+									<div class="comments__comment-img">
+										<img src="img/testimonial/09.jpg" alt="">
+									</div>
+									<div class="comments__comment-content">
+										<div class="comments__comment-header">
+											<div class="comments__comment-name">KomodoArt</div>
+											<div class="comments__comment-date">March 29, 2016</div>
+											<a class="comments__comment-btn btn" href="#">Reply</a>
+										</div>
+										<div class="comments__comment-text">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</div>
+									</div>
+								</div>
+								<div class="comments__comment">
+									<div class="comments__comment-img">
+										<img src="img/testimonial/07.jpg" alt="">
+									</div>
+									<div class="comments__comment-content">
+										<div class="comments__comment-header">
+											<div class="comments__comment-name">KomodoArt</div>
+											<div class="comments__comment-date">March 29, 2016</div>
+											<a class="comments__comment-btn btn" href="#">Reply</a>
+										</div>
+										<div class="comments__comment-text">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</div>
+									</div>
+								</div>
+								<div class="comments__comment">
+									<div class="comments__comment-img">
+										<img src="img/testimonial/06.jpg" alt="">
+									</div>
+									<div class="comments__comment-content">
+										<div class="comments__comment-header">
+											<div class="comments__comment-name">KomodoArt</div>
+											<div class="comments__comment-date">March 29, 2016</div>
+											<a class="comments__comment-btn btn" href="#">Reply</a>
+										</div>
+										<div class="comments__comment-text">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</div>
+									</div>
+								</div>
+								<div class="comments__comment">
+									<div class="comments__comment-img">
+										<img src="img/testimonial/09.jpg" alt="">
+									</div>
+									<div class="comments__comment-content">
+										<div class="comments__comment-header">
+											<div class="comments__comment-name">KomodoArt</div>
+											<div class="comments__comment-date">March 29, 2016</div>
+											<a class="comments__comment-btn btn" href="#">Reply</a>
+										</div>
+										<div class="comments__comment-text">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</div>
+									</div>
+								</div>
+							</div>
+							<!-- comments end -->
+
+							<!-- leave-comment -->
+							<div class="leave-comment">
+								<div class="leave-comment__title sidebar__title">Leave a Reply</div>
+								<div class="leave-comment__warning">Your email address will not be published. Required fields are marked *</div>
+								<div class="leave-comment__row">
+									<div class="leave-comment__column">
+										<form class="leave-comment__form" action="#">
+											<label class="leave-comment__form-label">Name <span>*</span>
+												<input class="leave-comment__form-name" type="text" name="#" id="#" required>
+											</label>
+											<label class="leave-comment__form-label">Email <span>*</span>
+												<input class="leave-comment__form-email" type="email" name="#" id="#" required>
+											</label>
+											<label class="leave-comment__form-label">Phone number
+												<input class="leave-comment__form-phone" type="tel" name="#" id="#">
+											</label>
+										</form>
+									</div>
+									<div class="leave-comment__column">
+										<form class="leave-comment__form" action="#">
+											<label class="leave-comment__form-label">Comment <span>*</span>
+												<textarea class="leave-comment__form-message" name="#" id="#"required></textarea>
+											</label>
+											<button class="leave-comment__form-btn btn">Post comment</button>
+										</form>
+									</div>
+								</div>
+							</div>
+							<!-- leave-comment end -->
+
 						</div>
 						<!-- blog-list__content end -->
 
