--- a/app/_header.html
+++ b/app/_header.html
@@ -74,7 +74,12 @@
 								<li class="menu__item menu__dropdown-item"><a href="blog-single.html" class="menu__link menu__dropdown-link">blog single</a></li>
 							</ul>
 						</li>
-						<li class="menu__item"><a class="menu__link" href="contact-us.html">Contact us</a></li>
+						<li class="menu__item"><a class="menu__link" href="#">Contact us</a>
+							<ul class="menu__dropdown">
+								<li class="menu__item menu__dropdown-item"><a href="contact-us.html" class="menu__link menu__dropdown-link">Contact</a></li>
+								<li class="menu__item menu__dropdown-item"><a href="about.html" class="menu__link menu__dropdown-link">About</a></li>
+							</ul>
+						</li>
 						<li class="menu__item menu__item-search"><a class="menu__link menu__link-btn"><i class="icon-search"></i></a>
 						<div class="search">
 							<form class="search__form" action="#">
