Add page contact

--- a/app/_header.html
+++ b/app/_header.html
@@ -62,6 +62,7 @@
 							<ul class="menu__dropdown">
 								<li class="menu__item menu__dropdown-item"><a href="all-categories.html" class="menu__link menu__dropdown-link">all categories</a></li>
 								<li class="menu__item menu__dropdown-item"><a href="shop-col.html" class="menu__link menu__dropdown-link">shop col</a></li>
+								<li class="menu__item menu__dropdown-item"><a href="detail.html" class="menu__link menu__dropdown-link">detail</a></li>
 							</ul>
 						</li>
 						<li class="menu__item"><a class="menu__link" href="all-categories-grid.html">Featured</a></li>
@@ -76,7 +77,8 @@
 						</li>
 						<li class="menu__item"><a class="menu__link" href="#">Contact us</a>
 							<ul class="menu__dropdown">
-								<li class="menu__item menu__dropdown-item"><a href="contact-us.html" class="menu__link menu__dropdown-link">Contact</a></li>
+								<li class="menu__item menu__dropdown-item"><a href="contact-us.html" class="menu__link menu__dropdown-link">Contact us</a></li>
+								<li class="menu__item menu__dropdown-item"><a href="contact.html" class="menu__link menu__dropdown-link">Contact</a></li>
 								<li class="menu__item menu__dropdown-item"><a href="about.html" class="menu__link menu__dropdown-link">About</a></li>
 							</ul>
 						</li>
