--- a/app/contact-us.html
+++ b/app/contact-us.html
@@ -216,16 +216,16 @@
 						</div>
 						<div class="contact-us__column">
 							<div class="contact-us__map">
-								<img src="img/contact/map.jpg" alt="">
+								<iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d3724.1236571378945!2d105.83461191111452!3d21.027737617713612!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3135ab9926e7bd67%3A0x580e078874d5df1e!2z0YXRgNCw0Lwg0JvQuNGC0LXRgNCw0YLRg9GA0Ys!5e0!3m2!1sru!2sua!4v1593508065954!5m2!1sru!2sua" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
 							</div>
 							<div class="contact-us__message">
 								<div class="contact-us__message-title">Send me a message</div>
-								<form action="#" class="contact-us__message-form">
+								<form action="" class="contact-us__message-form">
 									<input class="contact-us__message-text" type="text" placeholder="Yout name" required>
-									<input class="contact-us__message-email" type="email" name="#" id="#" placeholder="Your Email" required>
-									<input class="contact-us__message-phone" type="tel" name="#" id="#" placeholder="Phone" required>
-									<input class="contact-us__message-website" type="email" name="#" id="#" placeholder="Website" required>
-									<textarea class="contact-us__message-message" name="#" id="#" placeholder="Your message" required></textarea>
+									<input class="contact-us__message-email" type="email" name=""  placeholder="Your Email" required>
+									<input class="contact-us__message-phone" type="tel" name=""  placeholder="Phone" required>
+									<input class="contact-us__message-website" type="email" name=""  placeholder="Website" required>
+									<textarea class="contact-us__message-message" name=""  placeholder="Your message" required></textarea>
 									<button class="contact-us__message-btn btn">Send message</button>
 								</form>
 							</div>
